<resources>
    <string name="app_name">AppHealth</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--strings da activity inicial-->
    <string name="text_appHealth"><b>appHealth</b></string>
    <string name="hint_Usuario">Usuário</string>
    <string name="hint_Senha">Senha</string>
    <string name="button_Entrar">Entrar</string>
    <string name="button_Cadastrar">Cadastrar</string>

    <!--strings dos itens do listView-->
    <array name="profile_pics">
        <item>@drawable/imagem_teste</item>
        <item>@drawable/imagem_teste2</item>
    </array>

    <string-array name="statues_envio_cliente">
        <item>Enviado</item>
        <item>Não Enviado</item>
    </string-array>

    <!--strings da tela de nova Avaliação-->
    <string name="title_activity_tela__nova_avaliacao">tela_NovaAvaliacao</string>
    <string name="nome_Avaliado">Nome:</string>
    <string name="text_Altura">Altura:</string>
    <string name="text_Peso">Peso:</string>
    <string name="text_Genero">Genero:</string>
    <string name="radio_Homem">Homem</string>
    <string name="radio_Mulher">Mulher</string>
    <string name="radio_Ativo">Ativo</string>
    <string name="radio_Inativo">Inativo</string>
    <string name="text_SituacaoFisica">Situação Física:</string>
    <string name="text_Idade">Idade:</string>
    <string name="text_Salvar">Salvar e Voltar</string>
    <string name="text_SalvarEIniciar">Salvar e Iniciar Avaliação</string>

    <!--strings da tela de testes-->
    <string name="button_Resultados">Resultados :</string>
    <string name="button_Proximo">Proximo Teste</string>

    <!--strings tela fim do Teste-->
    <string name="text_FimdoTeste">Fim do Teste</string>
    <string name="button_SalvarTeste">Salvar Teste</string>
    <string name="button_SalvarEEnviarTeste">Salvar E Enviar</string>

    <!--Strings da tela consultas-->
    <string name="check_Enviado">Avaliação Enviada</string>
    <string name="button_Enviar">Enviar</string>

    <!--String da tela cadastro-->
    <string name="hint_Nome">Usuário</string>
    <string name="hint_SenhaCadastro">Senha</string>
    <string name="hint_ConfirmarSenha">Confirmar Senha</string>
    <string name="button_CadastrarBanco">Cadastrar</string>


    <string name="title_activity_iniciar_app_health">Iniciar_appHealth</string>
</resources>
