<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Iniciar_tela.Iniciar_appHealth"
    tools:showIn="@layout/activity_iniciar_app_health">

    <TextView
        android:id="@+id/text_appHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_appHealth"
        android:textSize="40sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="126dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/field_Usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_appHealth"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_Usuario"/>

    <EditText
        android:id="@+id/field_Senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_Usuario"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_Senha"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button_Entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_Senha"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:text="@string/button_Entrar"
        android:textColor="@android:color/white"
        android:onClick="onClick_Entrar"/>

    <Button
        android:id="@+id/button_Cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_Entrar"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/button_Cadastrar"
        android:textColor="@android:color/white"
        android:onClick="onClick_IniciarCadastro"/>

</RelativeLayout>
