<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ufpi.estagio.apphealth.Cadastro_tela.Cadastro_tela_activity">

    <EditText
        android:id="@+id/edit_Nome"
        android:layout_width="210dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_Senha"
        android:layout_alignLeft="@+id/edit_Senha"
        android:layout_alignStart="@+id/edit_Senha"
        android:hint="@string/hint_Usuario"/>

    <EditText
        android:id="@+id/edit_Senha"
        android:layout_width="210dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_ConfirmarSenha"
        android:layout_alignLeft="@+id/edit_ConfirmarSenha"
        android:layout_alignStart="@+id/edit_ConfirmarSenha"
        android:hint="@string/hint_SenhaCadastro"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/edit_ConfirmarSenha"
        android:layout_width="210dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button_CadastrarNovo"
        android:layout_alignStart="@+id/button_CadastrarNovo"
        android:hint="@string/hint_ConfirmarSenha"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button_CadastrarNovo"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_CadastrarBanco"
        android:onClick="onClick_Cadastrar"/>

</RelativeLayout>
